<resources>
    <!-- Reply Preference -->
    <string-array name="reply_entries">
        <item>Reply</item>
        <item>Reply to all</item>
    </string-array>

    <string-array name="reply_values">
        <item>reply</item>
        <item>reply_all</item>
    </string-array>

    <string-array name="settings_list_colors_titles">
        <item>Default</item>
        <item>Warm</item>
    </string-array>

    <string-array name="settings_list_colors_values">
        <item>Default</item>
        <item>Warm</item>
    </string-array>

    <string-array name="initial_values">
        <item>13</item>
        <item>66</item>
    </string-array>

</resources>