<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">

    <ListPreference
        app:dialogTitle="Select colors"
        app:entries="@array/settings_list_colors_titles"
        app:entryValues="@array/settings_list_colors_values"
        app:key="list_color"
        app:summary="Click to show the different color themes"
        app:title="Color themes"
        app:iconSpaceReserved="false" />

    <Preference
        app:iconSpaceReserved="false"
        app:summary="Report technical issues or suggest new features"
        app:title="Send feedback">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="mailto:palfinder@gmail.com">
            <extra
                android:name="android.intent.extra.SUBJECT"
                android:value="Feedback"/>
            <extra
                android:name="android.intent.extra.TEXT"
                android:value="Text of Feedback"/>
        </intent>
    </Preference>
    <Preference
        app:iconSpaceReserved="false"
        app:summary="Check the website for more information"
        app:title="Info">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="http://procatinator.com">
            <extra
                android:name="android.intent.extra.SUBJECT"
                android:value="Feedback"/>
            <extra
                android:name="android.intent.extra.TEXT"
                android:value="Text of Feedback"/>
        </intent>
    </Preference>

</PreferenceScreen>

